--- a/style.css
+++ b/style.css
@@ -123,73 +123,124 @@ body {
 .plant{
     background-color: var(--white);
     z-index: 998;
+    width: 100%;
 }
+
 .plant h2.title,
 .annonce h2.title{
     font-weight: 500;
     color: var(--green)
 }
+.plant .custom-container{
+    padding: 0 10px;
+}
+.plant-img{
+    position: relative;
+}
 
 .annonce{
-    margin-top:250px;
+    margin-top:350px;
 }
 /* Carousel */
-.wrapper .custom-carousel{
-    font-size: 0px;
-    cursor: pointer;
-    overflow: hidden;
-    white-space: nowrap;
-    scroll-behavior: smooth;
-}
-.custom-carousel.dragging{
-    cursor:grab;
-    scroll-behavior: auto;
-}
-.custom-carousel.dragging img{
-    pointer-events: none;
-}
-.wrapper {
-    position:relative;
-    padding: 0 35px;
-    margin:30px;
-}
-.wrapper i{
-    top:50%;
-    transform: translateY(-50%);
-    position: absolute;
-    display: inline-block;
-    font-size: 20px;
-    width: 50px;
+  .wrapper {
+    max-width: 1100px;
+    width: 100%;
+    position: relative;
+    transform: translateX(-50%);
+    left: 50%;
+  }
+  .wrapper i {
+    z-index:30;
+    top: 50%;
     height: 50px;
-    line-height: 50px;
-    border-radius: 50%;
-    background-color: var(--green);
-    color:var(--white);
-    text-align:center;
+    width: 50px;
     cursor: pointer;
-
-}
-.wrapper i:first-child{
-    left: -25px;
+    font-size: 1.25rem;
+    position: absolute;
+    text-align: center;
+    line-height: 50px;
+    background: #fff;
+    border-radius: 50%;
+    box-shadow: 0 3px 6px rgba(0,0,0,0.23);
+    transform: translateY(-50%);
+    transition: transform 0.1s linear;
+  }
+  .wrapper i:active{
+    transform: translateY(-50%) scale(0.85);
+  }
+  .wrapper i:first-child{
+    left: -22px;
+  }
+  .wrapper i:last-child{
+    right: -22px;
+  }
+  .wrapper .carousel{
+    display: grid;
+    grid-auto-flow: column;
+    grid-auto-columns: calc((100% / 4) - 12px);
+    overflow-x: auto;
+    scroll-snap-type: x mandatory;
+    gap: 8px;
+    border-radius: 8px;
+    scroll-behavior: smooth;
+    scrollbar-width: none;
+  }
+  .carousel::-webkit-scrollbar {
     display: none;
-}
-.wrapper i:last-child{
-    right: -25px;
-}
-.custom-carousel img{
-    height: 250px;
+  }
+  .carousel.no-transition {
+    scroll-behavior: auto;
+  }
+  .carousel.dragging {
+    scroll-snap-type: none;
+    scroll-behavior: auto;
+  }
+  .carousel.dragging .card {
+    cursor: grab;
+    user-select: none;
+  }
+  .carousel :where(.card, .img) {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .carousel .card {
+    scroll-snap-align: start;
+    height: 342px;
+    list-style: none;
+    background: #fff;
+    cursor: pointer;
+    padding-bottom: 15px;
+    flex-direction: column;
+    border-radius: 8px;
+  }
+  .carousel .card .img {
+    background: #8B53FF;
+    height: 148px;
+    width: 148px;
+    border-radius: 50%;
+  }
+  .card .img img {
+    width: 140px;
+    height: 140px;
+    border-radius: 50%;
     object-fit: cover;
-    margin-left:14px;
-    width: calc(100%/3);
-}
-.custom-carousel img:first-child{
-    margin-left:0px;
-}
+    border: 4px solid #fff;
+  }
+  .carousel .card h2 {
+    font-weight: 500;
+    font-size: 1.56rem;
+    margin: 30px 0 5px;
+  }
+  .carousel .card span {
+    color: #6A6D78;
+    font-size: 1.31rem;
+  }
 
 /* Media qurey section */
 @media screen and (max-width:1200px) {
-    .custom-carousel img {
-        width: calc(100% / 2);
+    .wrapper .carousel {
+        grid-auto-columns: calc((100% / 2) - 9px);
     }
 }
 @media screen and (max-width:767px) {
@@ -236,13 +287,13 @@ body {
     }
 
     /* Carousel */
-    .custom-carousel img{
-        width: 100%;
+    .wrapper .carousel {
+        grid-auto-columns: 100%;
     }
 }
 
 @media screen and (min-width: 768px) {
-    .container {
+    .custom-container {
         margin: 0;
     }
 }
