--- a/style.css
+++ b/style.css
@@ -141,101 +141,106 @@ body {
 .annonce{
     margin-top:350px;
 }
+
+.annonce .row .img img {
+    width: 600px;
+    height: 600px;
+} 
 /* Carousel */
-  .wrapper {
-    max-width: 1100px;
-    width: 100%;
-    position: relative;
-    transform: translateX(-50%);
-    left: 50%;
-  }
-  .wrapper i {
-    z-index:30;
-    top: 50%;
-    height: 50px;
-    width: 50px;
-    cursor: pointer;
-    font-size: 1.25rem;
-    position: absolute;
-    text-align: center;
-    line-height: 50px;
-    background: #fff;
-    border-radius: 50%;
-    box-shadow: 0 3px 6px rgba(0,0,0,0.23);
-    transform: translateY(-50%);
-    transition: transform 0.1s linear;
-  }
-  .wrapper i:active{
-    transform: translateY(-50%) scale(0.85);
-  }
-  .wrapper i:first-child{
-    left: -22px;
-  }
-  .wrapper i:last-child{
-    right: -22px;
-  }
-  .wrapper .carousel{
-    display: grid;
-    grid-auto-flow: column;
-    grid-auto-columns: calc((100% / 4) - 12px);
-    overflow-x: auto;
-    scroll-snap-type: x mandatory;
-    gap: 8px;
-    border-radius: 8px;
-    scroll-behavior: smooth;
-    scrollbar-width: none;
-  }
-  .carousel::-webkit-scrollbar {
-    display: none;
-  }
-  .carousel.no-transition {
-    scroll-behavior: auto;
-  }
-  .carousel.dragging {
-    scroll-snap-type: none;
-    scroll-behavior: auto;
-  }
-  .carousel.dragging .card {
-    cursor: grab;
-    user-select: none;
-  }
-  .carousel :where(.card, .img) {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-  .carousel .card {
-    scroll-snap-align: start;
-    height: 342px;
-    list-style: none;
-    background: #fff;
-    cursor: pointer;
-    padding-bottom: 15px;
-    flex-direction: column;
-    border-radius: 8px;
-  }
-  .carousel .card .img {
-    background: #8B53FF;
-    height: 148px;
-    width: 148px;
-    border-radius: 50%;
-  }
-  .card .img img {
-    width: 140px;
-    height: 140px;
-    border-radius: 50%;
-    object-fit: cover;
-    border: 4px solid #fff;
-  }
-  .carousel .card h2 {
-    font-weight: 500;
-    font-size: 1.56rem;
-    margin: 30px 0 5px;
-  }
-  .carousel .card span {
-    color: #6A6D78;
-    font-size: 1.31rem;
-  }
+.wrapper {
+max-width: 1100px;
+width: 100%;
+position: relative;
+transform: translateX(-50%);
+left: 50%;
+}
+.wrapper i {
+z-index:30;
+top: 50%;
+height: 50px;
+width: 50px;
+cursor: pointer;
+font-size: 1.25rem;
+position: absolute;
+text-align: center;
+line-height: 50px;
+background: #fff;
+border-radius: 50%;
+box-shadow: 0 3px 6px rgba(0,0,0,0.23);
+transform: translateY(-50%);
+transition: transform 0.1s linear;
+}
+.wrapper i:active{
+transform: translateY(-50%) scale(0.85);
+}
+.wrapper i:first-child{
+left: -22px;
+}
+.wrapper i:last-child{
+right: -22px;
+}
+.wrapper .carousel{
+display: grid;
+grid-auto-flow: column;
+grid-auto-columns: calc((100% / 4) - 12px);
+overflow-x: auto;
+scroll-snap-type: x mandatory;
+gap: 8px;
+border-radius: 8px;
+scroll-behavior: smooth;
+scrollbar-width: none;
+}
+.carousel::-webkit-scrollbar {
+display: none;
+}
+.carousel.no-transition {
+scroll-behavior: auto;
+}
+.carousel.dragging {
+scroll-snap-type: none;
+scroll-behavior: auto;
+}
+.carousel.dragging .card {
+cursor: grab;
+user-select: none;
+}
+.carousel :where(.card, .img) {
+display: flex;
+justify-content: center;
+align-items: center;
+}
+.carousel .card {
+scroll-snap-align: start;
+height: 342px;
+list-style: none;
+background: #fff;
+cursor: pointer;
+padding-bottom: 15px;
+flex-direction: column;
+border-radius: 8px;
+}
+.carousel .card .img {
+background: #8B53FF;
+height: 148px;
+width: 148px;
+border-radius: 50%;
+}
+.card .img img {
+width: 140px;
+height: 140px;
+border-radius: 50%;
+object-fit: cover;
+border: 4px solid #fff;
+}
+.carousel .card h2 {
+font-weight: 500;
+font-size: 1.56rem;
+margin: 30px 0 5px;
+}
+.carousel .card span {
+color: #6A6D78;
+font-size: 1.31rem;
+}
 
 /* Media qurey section */
 @media screen and (max-width:1200px) {
