--- a/style.css
+++ b/style.css
@@ -131,6 +131,9 @@ label.col-form-label{
     z-index: 998;
     width: 100%;
 }
+.plant .card{
+    position: relative;
+}
 
 .plant h2.title,
 .annonce h2.title{
@@ -143,6 +146,7 @@ label.col-form-label{
 .plant-img{
     position: relative;
 }
+
 .plant button,
 button.btn-send,
 button.btn-save{
@@ -155,7 +159,6 @@ button.btn-send:hover,
 button.btn-save:hover{
     background-color: var(--light-green);
     color: var(--white);
-
 }
 
 .annonce .card {
@@ -186,6 +189,18 @@ button.btn-save:hover{
 
 }
 
+/* Published */
+.plant .card.published i{
+    position: absolute;
+    top:0;
+    left:0;
+    font-size: 3rem;
+    color: var(--green);
+}
+.published{
+    border: 2px solid var(--green) !important;
+}
+
 /* Popover */
 /* Popover Header */
 .popover-header {
@@ -207,7 +222,7 @@ transform: translateX(-50%);
 left: 50%;
 overflow-x: hidden;
 }
-.wrapper i {
+.wrapper i.arrow {
 z-index:30;
 top: 50%;
 height: 50px;
@@ -224,16 +239,16 @@ box-shadow: 0 3px 6px rgba(0,0,0,0.23);
 transform: translateY(-50%);
 transition: transform 0.1s linear;
 }
-.wrapper i:active{
+.wrapper i.arrow:active{
 transform: translateY(-50%) scale(0.85);
 }
-.wrapper i:first-child{
+.wrapper i.arrow:first-child{
 left: -5px;
 }
-.wrapper i:last-child{
+.wrapper i.arrow:last-child{
 right: -5px;
 }
-.wrapper i:hover{
+.wrapper i.arrow:hover{
 background: var(--light-green);
 }
 .wrapper .carousel{
@@ -297,6 +312,8 @@ margin: 30px 0 5px;
 .carousel .card span {
 color: #6A6D78;
 font-size: 1.31rem;
+margin-bottom:2rem !important;
+
 }
 
 /* Footer */
