--- a/style.css
+++ b/style.css
@@ -197,6 +197,13 @@ button.btn-save:hover{
     font-size: 3rem;
     color: var(--green);
 }
+.carousel .card.published .img {
+    background: var(--green);
+    height: 148px;
+    width: 148px;
+    border-radius: 50%;
+}
+
 .published{
     border: 2px solid var(--green) !important;
 }
@@ -291,12 +298,7 @@ padding-bottom: 15px;
 flex-direction: column;
 border-radius: 8px;
 }
-.carousel .card .img {
-background: var(--green);
-height: 148px;
-width: 148px;
-border-radius: 50%;
-}
+
 .card .img img {
 width: 140px;
 height: 140px;
@@ -310,7 +312,6 @@ font-size: 1.56rem;
 margin: 30px 0 5px;
 }
 .carousel .card span {
-color: #6A6D78;
 font-size: 1.31rem;
 margin-bottom:2rem !important;
 
