--- a/style2.css
+++ b/style2.css
@@ -1,44 +1,44 @@
 @import url('https://fonts.googleapis.com/css?family=Poppins:400,500,600,700,800,900');
-body{
-	font-family: 'Poppins', sans-serif;
+.login{
+  font-family: 'Poppins', sans-serif;
 	font-weight: 300;
 	line-height: 1.7;
 	color: #ffeba7;
 	background-color: #1f2029;
 }
-a:hover {
+.login a:hover {
 	text-decoration: none;
 }
-.link {
+.login .link {
   color: #ffeba7;
 }
-.link:hover {
+.login .link:hover {
   color: #c4c3ca;
 }
-p {
+.login p {
   font-weight: 500;
   font-size: 14px;
 }
-h4 {
+.login h4 {
   font-weight: 600;
 }
-h6 span{
+.login h6 span{
   padding: 0 20px;
   font-weight: 700;
 }
-.section{
+.login .section{
   position: relative;
   width: 100%;
   display: block;
 }
-.full-height{
+.login .full-height{
   min-height: 100vh;
 }
 [type="checkbox"]:checked,
 [type="checkbox"]:not(:checked){
 display: none;
 }
-.checkbox:checked + label,
+.login .checkbox:checked + label,
 .checkbox:not(:checked) + label{
   position: relative;
   display: block;
@@ -51,7 +51,7 @@ display: none;
   cursor: pointer;
   background-color: #ffeba7;
 }
-.checkbox:checked + label:before,
+.login .checkbox:checked + label:before,
 .checkbox:not(:checked) + label:before{
   position: absolute;
   display: block;
@@ -70,10 +70,10 @@ display: none;
   font-size: 24px;
   transition: all 0.5s ease;
 }
-.checkbox:checked + label:before {
+.login .checkbox:checked + label:before {
   transform: translateX(44px) rotate(-270deg);
 }
-.card-3d-wrap {
+.login .card-3d-wrap {
   position: relative;
   width: 440px;
   max-width: 100%;
@@ -83,7 +83,7 @@ display: none;
   perspective: 800px;
   margin-top: 60px;
 }
-.card-3d-wrapper {
+.login .card-3d-wrapper {
   width: 100%;
   height: 100%;
   position:absolute;
@@ -91,7 +91,7 @@ display: none;
   transform-style: preserve-3d;
   transition: all 600ms ease-out; 
 }
-.card-front, .card-back {
+.login .card-front, .login .card-back {
   width: 100%;
   height: 100%;
   background-color: #2b2e38;
@@ -100,13 +100,13 @@ display: none;
   border-radius: 6px;
   -webkit-transform-style: preserve-3d;
 }
-.card-back {
+.login .card-back {
   transform: rotateY(180deg);
 }
-.checkbox:checked ~ .card-3d-wrap .card-3d-wrapper {
+.login .checkbox:checked ~ .card-3d-wrap .card-3d-wrapper {
   transform: rotateY(180deg);
 }
-.center-wrap{
+.login .center-wrap{
   position: absolute;
   width: 100%;
   padding: 0 35px;
@@ -116,13 +116,13 @@ display: none;
   z-index: 20;
   display: block;
 }
-.form-group{ 
+.login .form-group{ 
   position: relative;
   display: block;
     margin: 0;
     padding: 0;
 }
-.form-style {
+.login .form-style {
   padding: 13px 20px;
   padding-left: 55px;
   height: 48px;
@@ -140,13 +140,13 @@ display: none;
   transition: all 200ms linear;
   box-shadow: 0 4px 8px 0 rgba(21,21,21,.2);
 }
-.form-style:focus,
-.form-style:active {
+.login .form-style:focus,
+.login .form-style:active {
   border: none;
   outline: none;
   box-shadow: 0 4px 8px 0 rgba(21,21,21,.2);
 }
-.input-icon {
+.login .input-icon {
   position: absolute;
   top: 0;
   left: 18px;
@@ -157,7 +157,7 @@ display: none;
   -webkit-transition: all 200ms linear;
    transition: all 200ms linear;
 }
-.btn{  
+.login .btn{  
   border-radius: 4px;
   height: 44px;
   font-size: 13px;
@@ -174,7 +174,7 @@ display: none;
   background-color: #ffeba7;
   color: #000000;
 }
-.btn:hover{  
+.login .btn:hover{  
   background-color: #000000;
   color: #ffeba7;
   box-shadow: 0 8px 24px 0 rgba(16,39,112,.2);
