--- a/style.css
+++ b/style.css
@@ -1,4 +1,13 @@
 @import url('https://fonts.googleapis.com/css?family=Quicksand:400,500,700');
+@import url('https://fonts.googleapis.com/css?family=Poppins:400,500,600,700,800,900');
+
+
+/* --------------------------------------------------------------
+
+1) index.html ---------------------------------------------------
+
+----------------------------------------------------------------- */
+
 
 /* Color */
 :root {
@@ -645,3 +654,379 @@ footer section {
 		padding:2%;
 	}
 }
+
+
+/* --------------------------------------------------------------
+
+2) login.html ---------------------------------------------------
+
+----------------------------------------------------------------- */
+.login{
+  font-family: 'Poppins', sans-serif;
+	font-weight: 300;
+	line-height: 1.7;
+	color: #ffeba7;
+	background-color: #1f2029;
+}
+.login a:hover {
+	text-decoration: none;
+}
+.login .link {
+  color: #ffeba7;
+}
+.login .link:hover {
+  color: #c4c3ca;
+}
+.login p {
+  font-weight: 500;
+  font-size: 14px;
+}
+.login h4 {
+  font-weight: 600;
+}
+.login h6 span{
+  padding: 0 20px;
+  font-weight: 700;
+}
+.login .section{
+  position: relative;
+  width: 100%;
+  display: block;
+}
+.login .full-height{
+  min-height: 100vh;
+}
+[type="checkbox"]:checked,
+[type="checkbox"]:not(:checked){
+display: none;
+}
+.login .checkbox:checked + label,
+.checkbox:not(:checked) + label{
+  position: relative;
+  display: block;
+  text-align: center;
+  width: 60px;
+  height: 16px;
+  border-radius: 8px;
+  padding: 0;
+  margin: 10px auto;
+  cursor: pointer;
+  background-color: #ffeba7;
+}
+.login .checkbox:checked + label:before,
+.checkbox:not(:checked) + label:before{
+  position: absolute;
+  display: block;
+  width: 36px;
+  height: 36px;
+  border-radius: 50%;
+  color: #ffeba7;
+  background-color: #020305;
+  font-family: 'unicons';
+  content: '\eb4f';
+  z-index: 20;
+  top: -10px;
+  left: -10px;
+  line-height: 36px;
+  text-align: center;
+  font-size: 24px;
+  transition: all 0.5s ease;
+}
+.login .checkbox:checked + label:before {
+  transform: translateX(44px) rotate(-270deg);
+}
+.login .card-3d-wrap {
+  position: relative;
+  width: 440px;
+  max-width: 100%;
+  height: 400px;
+  -webkit-transform-style: preserve-3d;
+  transform-style: preserve-3d;
+  perspective: 800px;
+  margin-top: 60px;
+}
+.login .card-3d-wrapper {
+  width: 100%;
+  height: 100%;
+  position:absolute;
+  -webkit-transform-style: preserve-3d;
+  transform-style: preserve-3d;
+  transition: all 600ms ease-out; 
+}
+.login .card-front, .login .card-back {
+  width: 100%;
+  height: 100%;
+  background-color: #2b2e38;
+  background-image: url('/img/pattern_japanese-pattern-2_1_2_0-0_0_1__ffffff00_000000.png');
+  position: absolute;
+  border-radius: 6px;
+  -webkit-transform-style: preserve-3d;
+}
+.login .card-back {
+  transform: rotateY(180deg);
+}
+.login .checkbox:checked ~ .card-3d-wrap .card-3d-wrapper {
+  transform: rotateY(180deg);
+}
+.login .center-wrap{
+  position: absolute;
+  width: 100%;
+  padding: 0 35px;
+  top: 50%;
+  left: 0;
+  transform: translate3d(0, -50%, 35px) perspective(100px);
+  z-index: 20;
+  display: block;
+}
+.login .form-group{ 
+  position: relative;
+  display: block;
+    margin: 0;
+    padding: 0;
+}
+.login .form-style {
+  padding: 13px 20px;
+  padding-left: 55px;
+  height: 48px;
+  width: 100%;
+  font-weight: 500;
+  border-radius: 4px;
+  font-size: 14px;
+  line-height: 22px;
+  letter-spacing: 0.5px;
+  outline: none;
+  color: #c4c3ca;
+  background-color: #1f2029;
+  border: none;
+  -webkit-transition: all 200ms linear;
+  transition: all 200ms linear;
+  box-shadow: 0 4px 8px 0 rgba(21,21,21,.2);
+}
+.login .form-style:focus,
+.login .form-style:active {
+  border: none;
+  outline: none;
+  box-shadow: 0 4px 8px 0 rgba(21,21,21,.2);
+}
+.login .input-icon {
+  position: absolute;
+  top: 0;
+  left: 18px;
+  height: 48px;
+  font-size: 24px;
+  line-height: 48px;
+  text-align: left;
+  -webkit-transition: all 200ms linear;
+   transition: all 200ms linear;
+}
+.login .btn{  
+  border-radius: 4px;
+  height: 44px;
+  font-size: 13px;
+  font-weight: 600;
+  text-transform: uppercase;
+  -webkit-transition : all 200ms linear;
+  transition: all 200ms linear;
+  padding: 0 30px;
+  letter-spacing: 1px;
+  display: -webkit-inline-flex;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  align-items: center;
+  background-color: #ffeba7;
+  color: #000000;
+}
+.login .btn:hover{  
+  background-color: #000000;
+  color: #ffeba7;
+  box-shadow: 0 8px 24px 0 rgba(16,39,112,.2);
+}
+
+/* --------------------------------------------------------------
+
+2) profil.html ---------------------------------------------------
+
+----------------------------------------------------------------- */
+.profil{
+    margin-top:20px;
+}
+
+.profil .card-style1 {
+    box-shadow: 0px 0px 10px 0px rgb(89 75 128 / 9%);
+}
+.profil .border-0 {
+    border: 0!important;
+}
+.profil .card {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    min-width: 0;
+    word-wrap: break-word;
+    background-color: #fff;
+    background-clip: border-box;
+    border: 1px solid rgba(0,0,0,.125);
+    border-radius: 0.25rem;
+}
+
+.profil section {
+    padding: 120px 0;
+    overflow: hidden;
+    background: #fff;
+}
+.profil .mb-2-3, .profil .my-2-3 {
+    margin-bottom: 2.3rem;
+}
+
+.profil .section-title {
+    font-weight: 600;
+    letter-spacing: 2px;
+    text-transform: uppercase;
+    margin-bottom: 10px;
+    position: relative;
+    display: inline-block;
+}
+.profil .text-primary {
+    color: #ceaa4d !important;
+}
+.profil .text-secondary {
+    color: #15395A !important;
+}
+.profil .font-weight-600 {
+    font-weight: 600;
+}
+.profil .display-26 {
+    font-size: 1.3rem;
+}
+
+@media screen and (min-width: 992px){
+    .profil .p-lg-7 {
+        padding: 4rem;
+    }
+}
+@media screen and (min-width: 768px){
+    .profil .p-md-6 {
+        padding: 3.5rem;
+    }
+}
+@media screen and (min-width: 576px){
+    .profil .p-sm-2-3 {
+        padding: 2.3rem;
+    }
+}
+.profil .p-1-9 {
+    padding: 1.9rem;
+}
+
+.profil .bg-secondary {
+    background-image: linear-gradient(30deg, #15803d, #33a968)!important;
+}
+@media screen and (min-width: 576px){
+    .profil .pe-sm-6, .profil .px-sm-6 {
+        padding-right: 3.5rem;
+    }
+}
+@media screen and (min-width: 576px){
+    .profil .ps-sm-6, .profil .px-sm-6 {
+        padding-left: 3.5rem;
+    }
+}
+.profil .pe-1-9, .profil .px-1-9 {
+    padding-right: 1.9rem;
+}
+.profil .ps-1-9, .profil .px-1-9 {
+    padding-left: 1.9rem;
+}
+.profil .pb-1-9, .profil .py-1-9 {
+    padding-bottom: 1.9rem;
+}
+.profil .pt-1-9, .profil .py-1-9 {
+    padding-top: 1.9rem;
+}
+.profil .mb-1-9, .profil .my-1-9 {
+    margin-bottom: 1.9rem;
+}
+@media (min-width: 992px){
+    .profil .d-lg-inline-block {
+        display: inline-block!important;
+    }
+}
+.profil .rounded {
+    border-radius: 0.25rem!important;
+}
+
+.profil .button {
+    border: none;
+    color: #fff;
+    background-image: linear-gradient(30deg, #15803d, #33a968);
+    border-radius: 20px;
+    background-size: 100% auto;
+    font-family: inherit;
+    font-size: 20px;
+    padding: 0.6em 1.5em;
+   }
+
+   .profil .form__group {
+    position: relative;
+    width: 100%;
+    max-width: 180px;
+  }
+  
+  .profil .form__field {
+    font-family: inherit;
+    width: 100%;
+    border: none;
+    border-bottom: 2px solid #9b9b9b;
+    outline: 0;
+    font-size: 17px;
+    background: transparent;
+    transition: border-color 0.2s;
+  }
+  
+  .profil .form__field::placeholder {
+    color: transparent;
+  }
+  
+  .profil .form__field:placeholder-shown ~ .form__label {
+    font-size: 17px;
+    cursor: text;
+    top: 20px;
+  }
+  
+  .profil .form__label {
+    position: absolute;
+    top: 0;
+    display: block;
+    transition: 0.2s;
+    font-size: 17px;
+    color: #9b9b9b;
+    pointer-events: none;
+  }
+  
+  .profil .form__field:focus {
+    font-weight: 700;
+    border-width: 3px;
+    border-image: linear-gradient(to right, #15803d, #33a968);
+    border-image-slice: 1;
+  }
+  
+  .profil .form__field:focus ~ .form__label {
+    position: absolute;
+    top: 0;
+    display: block;
+    transition: 0.2s;
+    font-size: 17px;
+    color: #15803d;
+    font-weight: 700;
+  }
+  
+  /* reset input */
+  .profil .form__field:required, .profil .form__field:invalid {
+    box-shadow: none;
+  }
+
+  @media screen and (max-width: 576px){
+    .profil .center{
+        text-align: center;
+    }
+  }
