--- a/style.css
+++ b/style.css
@@ -874,6 +874,15 @@ display: none;
     overflow: hidden;
     background: #fff;
 }
+@media screen and (max-width: 576px){
+.profil section {
+    height: 100%;
+    padding: 120px 0;
+    overflow: hidden;
+    background: #fff;
+}
+}
+
 .profil .mb-2-3, .profil .my-2-3 {
     margin-bottom: 2.3rem;
 }
