--- a/style.css
+++ b/style.css
@@ -848,6 +848,8 @@ display: none;
 
 ----------------------------------------------------------------- */
 .profil{
+    z-index: -1;
+    position: relative;
 }
 
 .profil .card-style1 {
