--- a/style.css
+++ b/style.css
@@ -668,17 +668,17 @@ footer section {
   font-family: 'Poppins', sans-serif;
 	font-weight: 300;
 	line-height: 1.7;
-	color: #ffeba7;
+	color: var(--light-green);
 	background-color: #1f2029;
 }
 .login a:hover {
 	text-decoration: none;
 }
 .login .link {
-  color: #ffeba7;
+  color: var(--light-green);
 }
 .login .link:hover {
-  color: #c4c3ca;
+  color: var(--green);
 }
 .login p {
   font-weight: 500;
@@ -714,7 +714,7 @@ display: none;
   padding: 0;
   margin: 10px auto;
   cursor: pointer;
-  background-color: #ffeba7;
+  background-color: var(--light-green);
 }
 .login .checkbox:checked + label:before,
 .checkbox:not(:checked) + label:before{
@@ -723,7 +723,7 @@ display: none;
   width: 36px;
   height: 36px;
   border-radius: 50%;
-  color: #ffeba7;
+  color: var(--light-green);
   background-color: #020305;
   font-family: 'unicons';
   content: '\eb4f';
@@ -758,7 +758,7 @@ display: none;
 }
 .login .card-front, .login .card-back {
   width: 100%;
-  height: 100%;
+  height: 450px;
   background-color: #2b2e38;
   background-image: url('/img/pattern_japanese-pattern-2_1_2_0-0_0_1__ffffff00_000000.png');
   position: absolute;
@@ -836,12 +836,12 @@ display: none;
   display: -ms-inline-flexbox;
   display: inline-flex;
   align-items: center;
-  background-color: #ffeba7;
-  color: #000000;
+  background-color: var(--light-green);
+  color: var(--white);
 }
 .login .btn:hover{  
-  background-color: #000000;
-  color: #ffeba7;
+  background-color: var(--green);
+  color: var(--white);
   box-shadow: 0 8px 24px 0 rgba(16,39,112,.2);
 }
 
