--- a/style.css
+++ b/style.css
@@ -738,6 +738,11 @@ display: none;
 .login .checkbox:checked + label:before {
   transform: translateX(44px) rotate(-270deg);
 }
+
+.signup .checkbox:checked + label:before {
+
+  }
+
 .login .card-3d-wrap {
   position: relative;
   width: 440px;
