--- a/style.css
+++ b/style.css
@@ -1093,6 +1093,7 @@ display: none;
 .mailbox {
     min-height: 100vh;
 }
+
 .mailbox h2.title{
     margin-top: 10rem;
 }
@@ -1147,4 +1148,117 @@ display: none;
 
 .mailbox .read button{
     font-weight: bold;
+}
+
+/* --------------------------------------------------------------
+
+4) conversation.html ---------------------------------------------------
+
+----------------------------------------------------------------- */
+.conversation .menu{
+    margin-top:8rem;
+}
+
+/* Nav Conversation */
+.menu {
+    position: fixed;
+    top: 0px;
+    left: 0px;
+    right: 0px;
+    width: 100%;
+    height: 50px;
+    background: var(--green);
+    z-index: 100;
+}
+
+.back {
+    position: absolute;
+    width: 90px;
+    height: 50px;
+    top: 0px;
+    left: 0px;
+    color: #fff;
+    line-height: 50px;
+    font-size: 30px;
+    padding-left: 10px;
+    cursor: pointer;
+}
+.back img {
+    position: absolute;
+    top: 5px;
+    left: 30px;
+    width: 40px;
+    height: 40px;
+    background-color: rgba(255,255,255,0.98);
+    border-radius: 100%;
+    -webkit-border-radius: 100%;
+    -moz-border-radius: 100%;
+    -ms-border-radius: 100%;
+    margin-left: 15px;
+    }
+.back:active {
+    background: rgba(255,255,255,0.2);
+}
+.name{
+    position: absolute;
+    top: 3px;
+    left: 110px;
+    font-family: 'Lato';
+    font-size: 25px;
+    font-weight: 300;
+    color: rgba(255,255,255,0.98);
+    cursor: default;
+}
+.last{
+    position: absolute;
+    top: 30px;
+    left: 115px;
+    font-family: 'Lato';
+    font-size: 11px;
+    font-weight: 400;
+    color: rgba(255,255,255,0.6);
+    cursor: default;
+}
+
+/* Conversation */
+.conversation-container {
+    min-height: 80vh;
+    width: 90%;
+    margin: auto;
+}
+
+.conversation-wrap {
+    margin-top:15rem;
+}
+
+.conversation-block {
+    display: flex;
+    margin-bottom: 1rem;
+    border-radius: 2rem;
+    padding: 1.5rem;
+
+}
+
+.conversation-block.sender {
+    width: 50%;
+    background-color: var(--light);
+}
+
+.conversation-block.recepient {
+    display: flex;
+    width: 50%;
+    margin-left: 50%;
+    align-items: end;
+    flex-direction: column;
+    background-color: var(--light-green);
+}
+
+.bubble{
+    margin-bottom:1rem;
+    font-size: 2rem;
+}
+
+.time {
+    font-size: 0.8rem;
+    color: var(--black);
 }
